--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="./example1/">Example 1</a> – Introduction to three.js</li>
             <li><a href="./example2/">Example 2</a> – Introduction to rhino3dm.js and 3DMLoader for three.js</li>
             <li><a href="./example3/">Example 3</a> - Extends example 2 by adding a mouse click event.</li>
-            <li><a href="./EXAMPLE4/">ASSIGNMENT 02  //  UBUNTU 3DM MODEL</a></li>
+            <li><a href="./example4/">ASSIGNMENT 02  //  UBUNTU 3DM MODEL</a></li>
     
         <br />
         <br />
