--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             }
 
             
-            h1 {font-family: Helvetica, sans-serif;font-size:180%; line-height:100%;max-width: 512px;FONT;}
+            h1 {font-family: Helvetica, sans-serif;font-size:180%; line-height:100%;max-width: 512px;}
             h2 {font-family: Arial, Helvetica, sans-serif;font-size: 120%; line-height:60%;}
             h3 {font-family: Arial;font-size: 100%; line-height:120%;font-style: normal;font-weight: normal;max-width: 520px;}
             h4 {font-family: Arial;font-size: 90%; line-height:100%;font-style: normal;font-weight: normal;max-width: 512px;}
